app-pipeline/k8s/weather-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
spec:
  type: LoadBalancer
  selector:
    app: weather-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
