app-pipeline/k8s/weather-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: weatherapp.okproject.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-app
            port:
              number: 80
